snapshots/truth__parse__tests__bad_ins_identifier.snap
---
source: src/parse/tests.rs
expression: "expect_parse_error::<ast::Expr>(\"instruction\", r#\" ins_04() \"#).trim()"
---
error: invalid identifier
  ┌─ <input>:1:2
  │
1 │  ins_04() 
  │  ^^^^^^ invalid instruction identifier
  │
  = identifiers beginning with "ins_" are reserved for instructions and must follow a specific format
